2013-06-03 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (selectIdentify)
	Fix adding of the solo ORDER BY option.

2013-06-03 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (selectIdentify)
	Support ORDER BY in options clause

2013-05-21 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Initialize with defaults

	* AppController.m
	Set reasonable defaults.

2013-05-21 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	Setter for up batch size (and use it in the up methods).

2013-05-20 Riccardo Mottola <rm@gnu.org>

	* Preferences.m
	Up batch size field.

2013-05-15 Riccardo Mottola <rm@gnu.org>

	* Preferences.m
	Fix and improve view swizzling

2013-05-15 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Implement update for Select-Identify and Update.

2013-05-15 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* AppController.h
	* Preferences.m
	* Preferences.h
        * English.lproj/MainMenu.nib
        * English.lproj/Preferences.nib
        New Preferences panel with separate class.

2013-05-08 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* AppController.h
	* Resources/DataBasin.gorm
	Progress monitor for Insert

2013-05-08 Riccardo Mottola <rm@gnu.org>

	* DBProgress.h
	* DBProgress.m
	Show remaining time in time field.

2013-05-08 Riccardo Mottola <rm@gnu.org>

	* AppController.m (executeInsert)
	Fix: read correct field

2013-05-06 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* DBSoapCSV.h
	* DBSoapCSV.m
	Save create results to file.

2013-05-05 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m (create)
	Return array of results for created objects.

2013-04-29 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	On query, set the type property.

2013-04-29 Riccardo Mottola <rm@gnu.org>

	* DBSObject.h
	* DBSObject.m
	Make type accessor, perfect name accessor, return better description.

2013-04-26 Riccardo Mottola <rm@gnu.org>

	* DBSObject.m (description)
	Return name and ID as description.

2013-04-26 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m